--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site is created by Udgeet Patel. It uses data from mapbox.com and skydark.net </p>
         <img class='portrait' src="/img/robot.png">
     </div>
     {{>footer}}
